--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,8 @@ name: Build and Deploy React App v0.81
 on:
   push:
     branches:
-      - server
+      - main
+  workflow_dispatch:
 
 jobs:
   build:
