--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-highlight": "^0.15.0",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^9.1.3",
+    "rehype-raw": "^6.1.1",
+    "remark-breaks": "^3.0.3",
+    "remark-rehype": "^10.1.0",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4",
     "zustand": "^4.3.8"
@@ -51,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
