--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.3",
     "rehype-raw": "^6.1.1",
