--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
+    "crypto-js": "^4.1.1",
+    "formik": "^2.4.2",
     "highlight.js": "^11.8.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
@@ -30,8 +32,10 @@
     "rehype-raw": "^6.1.1",
     "remark-breaks": "^3.0.3",
     "remark-rehype": "^10.1.0",
+    "swiper": "^10.0.4",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4",
+    "yup": "^1.2.0",
     "zustand": "^4.3.8"
   },
   "scripts": {
